--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -47,7 +47,7 @@
                             <li><a href="__APP__/Warn/query">查询告警信息</a></li>
                         </ul>                   
                     </li>
-                    <li class="dropdown" id="Warn">                   
+                    <li class="dropdown" id="Report">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-bar-chart"></i>
                             <span>统计报表</span>
@@ -69,17 +69,17 @@
                             <li><a href="__APP__/Search/internet">全网搜索</a></li>
                         </ul>                   
                     </li>
-                    <li class="dropdown" id="Report">                   
+                    <!--<li class="dropdown" id="Mointor">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-print"></i>
                             <span>监控报告</span>
                             <b class="caret"></b>
                         </a>    
                         <ul class="dropdown-menu">
-                            <li><a href="__APP__/Report/query">查询监控报告</a></li>
-                            <li><a href="__APP__/Report/temp">监控报告模板</a></li>
+                            <li><a href="__APP__/Mointor/query">查询监控报告</a></li>
+                            <li><a href="__APP__/Mointor/temp">监控报告模板</a></li>
                         </ul>                   
-                    </li>
+                    </li>-->
                     <li class="dropdown" id="System">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-cogs"></i>
