--- a/radar/Tpl/search/queryintranet.html
+++ b/radar/Tpl/search/queryintranet.html
@@ -17,8 +17,8 @@
 							<h3>站内搜索</h3>
 						</div>
 						<div class="widget-content">
-							<form class="form-search pagination text-center"
-								action="__URL__/searchIntranet">
+							<form
+								action="__URL__/searchIntranet" method="get" class="form-search pagination text-center">
 								<input type="text" class="input-xxlarge" name="q" id="q" value="{$q}" placeholder="请输入搜索词">
 								<button type="submit" class="btn glow  btn-primary">搜索</button>
 							</form>
