--- a/radar/Tpl/report/report.html
+++ b/radar/Tpl/report/report.html
@@ -1,3 +1,6 @@
+<style>
+i{font-style:italic}
+</style>
 <div class="main">
     <div class="container">
       <div class="row">
@@ -12,77 +15,27 @@
 					<table class="table table-striped table-bordered  table-highlight">
 						<thead>
 							<tr>
-								<th>正常任务数量</th>
-								<th>暂停任务数量</th>
-								<th>删除任务数量</th>
-								<th>主动任务数量</th>
-								<th>被动任务数量</th>
-								<th>两者兼有数量</th>
-								<th>被动任务关键词数量</th>
-								<th>被动任务告警数量</th>
+								<th class="td-actions">正常任务数量</th>
+								<th class="td-actions">暂停任务数量</th>
+								<th class="td-actions">删除任务数量</th>
+								<th class="td-actions">主动任务数量</th>
+								<th class="td-actions">被动任务数量</th>
+								<th class="td-actions">两者兼有数量</th>
+								<th class="td-actions">被动任务关键词数量</th>
+								<th class="td-actions">被动任务告警数量</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>
-							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>
-							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>
-							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>
-							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>
-							<tr>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-								<td>北京</td>
-								<td>张三</td>
-							</tr>						
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_common}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_pause}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_del}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_zd}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_bd}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_bo}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_keyword}</span></i></td>
+								<td class="td-actions"><i><span class="badge badge-warning">{$count_warn}</span></i></td>
+							</tr>					
 							</tbody>
 						</table>
 						
