--- a/radar/Tpl/warn/querywarn.html
+++ b/radar/Tpl/warn/querywarn.html
@@ -39,7 +39,7 @@
 							<thead>
 								<tr>
 									<th width="2%">
-										<input type="checkbox" name="keywords[]" value="{$keyword.keyword}"></th>
+										<input type="checkbox" name="keywords[]"></th>
 									<th width="11%">网站名称</th>
 									<th width="8%">关键词</th>
 									<th width="15%">新闻标题</th>
