--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -69,17 +69,17 @@
                             <li><a href="__APP__/Search/internet">全网搜索</a></li>
                         </ul>                   
                     </li>
-                    <!--<li class="dropdown" id="Mointor">                   
+                    <li class="dropdown" id="Mointor">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-print"></i>
                             <span>监控报告</span>
                             <b class="caret"></b>
                         </a>    
                         <ul class="dropdown-menu">
-                            <li><a href="__APP__/Mointor/query">查询监控报告</a></li>
-                            <li><a href="__APP__/Mointor/temp">监控报告模板</a></li>
+                            <li><a href="__APP__/Bulletins/open">查询监控报告</a></li>
+                            <!-- <li><a href="__APP__/Mointor/temp">监控报告模板</a></li> -->
                         </ul>                   
-                    </li>-->
+                    </li>
                     <li class="dropdown" id="System">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-cogs"></i>
