--- a/radar/Tpl/header.html
+++ b/radar/Tpl/header.html
@@ -4,7 +4,7 @@
             
             <a class="brand">
             <img src="../Public/imgs/radar.png" height="40" width="40" style="width:40px; height:40px;" />
-                信息审查雷达
+                天桥科技政府门户网站保密搜索系统
             </a>        
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
