--- a/radar/Tpl/layout.html
+++ b/radar/Tpl/layout.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- <base href="/radar/"> -->
-    <title>信息审查雷达</title>
+    <title>天桥科技政府门户网站保密搜索系统</title>
     <include file="./Tpl/include.html"/>
   </head>
 <body>
