--- a/radar/Tpl/include.html
+++ b/radar/Tpl/include.html
@@ -23,4 +23,5 @@
 <script src="../Public/js/messenger.min.js"></script>
 <script src="../Public/js/animateBackground-plugin.js"></script>
 <script src="../Public/js/Application.js"></script>
+<script src="../Public/Charts/FusionCharts.js"></script>
 <!-- <script src="../Public/js/zepto.icheck.js"></script> -->
