--- a/radar/Tpl/search/queryintranet.html
+++ b/radar/Tpl/search/queryintranet.html
@@ -50,20 +50,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="widget-content text-center">
-						<div class="pagination" id="example">
-							<ul>
-								<li><a title="Go to first page">&lt;&lt;</a></li>
-								<li><a title="Go to previous page">&lt;</a></li>
-								<li><a title="Go to page 1">1</a></li>
-								<li><a title="Go to page 2">2</a></li>
-								<li><a title="Go to page 3">3</a></li>
-								<li class="active"><a title="Current page is 4">4</a></li>
-								<li><a title="Go to page 5">5</a></li>
-								<li><a title="Go to next page">&gt;</a></li>
-								<li><a title="Go to last page">&gt;&gt;</a></li>
-							</ul>
-						</div>
+					<div class="widget-content text-right">
+                       <div class="pagination"><ul>{$page}</ul></div>
 					</div>
 				</div>
 				</notempty>
