--- a/radar/Tpl/warn/querywarn.html
+++ b/radar/Tpl/warn/querywarn.html
@@ -72,9 +72,9 @@
 											<a href="__URL__/view?id={$v.id}" class="btn btn-small btn-warning">
 												<i class="btn-icon-only icon-zoom-in" title="查看详情"></i>
 											</a>
-											<a href="javascript:;" class="btn btn-small btn-warning">
+											<!-- <a href="javascript:;" class="btn btn-small btn-warning">
 												<i class="btn-icon-only icon-refresh" title="重新检测"></i>
-											</a>
+											</a> -->
 											<a href="{$v.link}" target="_blank" class="btn btn-small btn-warning">
 												<i class="btn-icon-only icon-share-alt" title="查看链接"></i>
 											</a>
