--- a/radar/Tpl/system/system.html
+++ b/radar/Tpl/system/system.html
@@ -61,7 +61,9 @@
 						</table>
 
 					</div>
-					<div class="widget-content text-right"></div>
+					<div class="widget-content text-right">
+                                        {$chart_cpu}
+                                        </div>
 				</div>
 			</div>
 		</div>
