--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -6,13 +6,13 @@
             </a>
             <div class="subnav-collapse collapse">
                 <ul class="mainnav">
+                <if condition="($Think.session.loginuser.userType eq 0) OR ($Think.session.loginuser.userType eq 1)">
                     <li class="" id="Index">
                         <a href="__APP__/Index/index">
                             <i class="icon-dashboard"></i>
                             <span>控制面板</span>
                         </a>                        
                     </li>
-                    
                     <li class="dropdown active" id="Keyword">                    
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-th"></i>
@@ -24,7 +24,6 @@
                             <li><a href="__APP__/Keyword/add">添加关键词</a></li>
                         </ul>               
                     </li>
-                    
                     <li class="dropdown" id="Site">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-link"></i>
@@ -87,7 +86,6 @@
                             <b class="caret"></b>
                         </a>    
                         <ul class="dropdown-menu">
-                            <li><a href="__APP__/System/auditlog">审计日志</a></li>
                             <li><a href="__APP__/System/failsite">监控失败站点</a></li>
                             <li><a href="__APP__/System/system">服务器运行状况</a></li>
                         </ul>                   
@@ -103,6 +101,18 @@
                             <li><a href="__APP__/Account/add">添加系统账户</a></li>
                         </ul>                   
                     </li>
+                 <elseif condition="$Think.session.loginuser.userType eq 2" />
+                    <li class="dropdown" id="System">                   
+                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="icon-cogs"></i>
+                            <span>系统管理</span>
+                            <b class="caret"></b>
+                        </a>    
+                        <ul class="dropdown-menu">
+                            <li><a href="__APP__/System/auditlog">审计日志</a></li>
+                        </ul>                   
+                    </li>
+                    </if>
                 </ul>
             </div>
         </div>
