--- a/radar/Tpl/report/report.html
+++ b/radar/Tpl/report/report.html
@@ -21,8 +21,8 @@ i{font-style:italic}
 								<th class="td-actions">主动任务数量</th>
 								<th class="td-actions">被动任务数量</th>
 								<th class="td-actions">两者兼有数量</th>
-								<th class="td-actions">被动任务关键词数量</th>
-								<th class="td-actions">被动任务告警数量</th>
+								<th class="td-actions">被动任务关键词</th>
+								<th class="td-actions">被动任务告警</th>
 							</tr>
 						</thead>
 						<tbody>
