--- a/radar/Tpl/system/system.html
+++ b/radar/Tpl/system/system.html
@@ -1,4 +1,3 @@
-
 <div class="main">
 	<div class="container">
 		<div class="row">
@@ -39,10 +38,10 @@
 								</tr>
 								<tr>
 									<td>数据库状态</td>
-									<td>{$dbstate}
-									<if condition="$dbstate == 0">
+									<td>
+									<if condition="$dbstate eq '0'">
 									正常
-									<else/>
+									<else />
 									<span style="color: red">异常</span>
 									</if>
 									</td>
@@ -50,9 +49,9 @@
 								<tr>
 									<td>爬虫状态</td>
 									<td>
-									<if condition="$crawlerstate == 0">
+									<if condition="$crawlerstate eq '0'">
 									正常
-									<else/>
+									<else />
 									<span style="color: red">异常</span>
 									</if>
 									</td>
