--- a/radar/Tpl/header.html
+++ b/radar/Tpl/header.html
@@ -3,8 +3,7 @@
         <div class="container">
             
             <a class="brand">
-            <img src="../Public/imgs/radar.png" height="40" width="40" style="width:40px; height:40px;" />
-                天桥科技政府门户网站保密搜索系统
+            <img src="../Public/loginimage/logo_kelu.png" height="41" width="408" style="width:408px; height:41px;" />
             </a>        
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
