--- a/radar/Tpl/login.html
+++ b/radar/Tpl/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>登录</title>
+    <title>天桥科技政府门户网站保密搜索系统</title>
 	<include file="./Tpl/include.html"/>
     <link href="../Public/css/signin.css" rel="stylesheet" type="text/css">
 </head>
@@ -11,7 +11,7 @@
 <div class="account-container stacked">
 	<div class="content clearfix">
 		<form action="__APP__/Index/index" method="post">
-			<h1>信息审查雷达</h1>		
+			<h1>天桥科技政府门户网站保密搜索系统</h1>		
 			<div class="login-fields">
 				<div class="field">
 					<label for="username">Username:</label>
