--- a/radar/Tpl/bulletins/bulletins.html
+++ b/radar/Tpl/bulletins/bulletins.html
@@ -13,16 +13,18 @@
 						<table class="table table-striped table-bordered  table-highlight">
 							<thead>
 								<tr>
-									<th>标题</th>
-									<th>创建人</th>
-									<th>创建时间</th>
-									<th>操作</th>
+									<th width="15%">标题</th>
+                                                                        <th width="55%">集合</th>
+									<th width="10%">创建人</th>
+									<th width="14%">创建时间</th>
+									<th width="5%">操作</th>
 								</tr>
 							</thead>
 							<tbody>
 								<volist name="bulletins" id="v">
 								<tr>
 									<td>{$v.title}</td>
+                                                                        <td>{$v.desc}</td>
 									<td>{$v.operator}</td>
 									<td>{$v.createTime}</td>
 									<td>
