--- a/radar/Tpl/login/show.html
+++ b/radar/Tpl/login/show.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>登录</title>
+    <title>天桥科技政府门户网站保密搜索系统</title>
 	<include file="./Tpl/include.html"/>
     <link href="../Public/css/signin.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 {__NOLAYOUT__}
-<div class="account-container stacked">
+<div class="row">
 	<div class="content clearfix">
 		<form action="__APP__/Login/login" method="post">
-			<h1>信息审查雷达</h1>		
+			<h1>天桥科技政府门户网站保密搜索系统</h1>		
 			<div class="login-fields">
 				<div class="field">
 					<label for="userId">Username:</label>
